--- a/public/styles.css
+++ b/public/styles.css
@@ -54,7 +54,9 @@ tr:nth-child(even) {
 .error {
   color: red;
 }
-
+.col-12{
+  height: 75px;
+}
 .wrapper {
   margin: 0 auto;
   max-width: 825px;
